--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-22  Stan Cox  <scox@redhat.com>
+
+        * Makefile.in (OBJS): Add dependence.o.
+        * dependence.c: New file.
+        
 2000-08-22  Alexandre Oliva  <aoliva@redhat.com>
 
 	* invoke.texi (SH Options): Document -m4-nofpu,
