--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-22  Richard Henderson  <rth@cygnus.com>
+
+	* flow.c (tidy_fallthru_edge): Update b->end properly.
+
 2000-08-22  Stan Cox  <scox@redhat.com>
 
         * Makefile.in (OBJS): Add dependence.o.
