--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,15 @@
-2000-08-22 Steven King <sxking@uswest.net>
+2000-08-22  David Edelsohn  <edelsohn@gnu.org>
+
+	* aix.h (ASM_DECLARE_FUNCTION_NAME): Call named_section() or
+        text_section() as appropriate instead of emitting text csect
+	pseudo-op directly.
+	(TEXT_SECTION_ASM_OP): Only require default 32-bit alignment.
+	(UNIQUE_SECTION): Define macro.
+	(ASM_OUTPUT_SECTION_NAME): Define macro.
+	* rs6000.c (rs6000_override_options): Disable -ffunction-sections
+        on AIX if debugging and -fdata-sections always.
+
+2000-08-22  Steven King  <sxking@uswest.net>
 
 	* config/float-i386.h (LDBL_EPSILON): Remove __convert_long_double
 	machinery.
@@ -214,7 +225,7 @@ Mon Aug 21 07:41:12 2000  Jeffrey A Law  (law@cygnus.com)
 	* cppinit.c (cpp_init): Set global flag when called.
 	(cpp_reader_init): Bomb out if cpp_init hasn't been called.
 
-Sun Aug 20 01:41:35 MSD 2000 Dennis Chernoivanov <cdi@sparc.spb.su>
+Sun Aug 20 01:41:35 2000  Dennis Chernoivanov  <cdi@sparc.spb.su>
 
         * cpplex.c (cpp_scan_buffer): Move `output_line_command' just
         before `process_directive' so that newlines won't be missed
