--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -26,6 +26,10 @@
         
 2000-08-22  Alexandre Oliva  <aoliva@redhat.com>
 
+	* calls.c (check_sibcall_argument_overlap_1): Adjust for
+	ARGS_GROW_DOWNWARD.
+	(check_sibcall_argument_overlap): Likewise.
+
 	* invoke.texi (SH Options): Document -m4-nofpu,
 	-m4-single-only, -m4-single, -m4, -mbigtable, -mfmovd,
 	-mhitachi, -mnomacsave, -misize, -mpadstruct, -mspace.
