--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-22  Nick Clifton  <nickc@redhat.com>
+
+	* config/arm/lib1funcs.asm (__umodsi3): Before performing any
+	restorative additions, test for bottom bits of IP being set,
+	rather than relying upon the RORs not matching.
+	(__modsi3): Ditto.
+
 2000-08-22  David Edelsohn  <edelsohn@gnu.org>
 
 	* aix.h (ASM_DECLARE_FUNCTION_NAME): Call named_section() or
