--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug 22 21:21:05 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* toplev.c (rest_of_compilation): Rebuild label notes after
+	post-reload splitting pass if new labels have been created.
+
 2000-08-22  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* diagnostic.h (output_buffer_state): New macro.
