--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-22  DJ Delorie  <dj@redhat.com>
+
+	* MAINTAINERS: Add self as a build machinery (*.in) maintainer
+
 2000-08-22  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config-ml.in (CC, CXX): Avoid trailing whitespace.
