* c-parse.in (unop +): Restrict -Wtraditional warnings to user code.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35899 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* c-parse.in (unop +): Restrict -Wtraditional warnings to user code.
+
 2000-08-22  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* vax.h (ASM_SPEC): Pass `-J' to assembler.
