* error.c (cp_print_error_function): Don't use embedded '\n' in 	output_printf.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35906 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2000-08-23  Gabriel Dos Reis  <gdr@codesourcery.com>
 
+	* error.c (cp_print_error_function): Don't use embedded '\n' in
+	output_printf. 
+
+2000-08-23  Gabriel Dos Reis  <gdr@codesourcery.com>
+
 	* decl.c (init_decl_processing): Remove bogus initialization.
 	* error.c (lang_print_error_function): Restore here.
 	(init_error): Initialize print_error_function. 
