Fix sed script for sysv86_string fix
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35908 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-12  Eli Zaretskii  <eliz@is.elta.co.il>
+
+	* fixinc/inclhack.def (sysv68_string): Fix the Sed script so it
+	works inside fixincl.
+
 Wed Aug 23 04:55:48 2000  Alexandre Oliva  <aoliva@redhat.com>
 
 	* simplify-rtx.c (simplify_rtx): Don't pass VOIDmode to
