* c-common.c (print_char_table): Allow 'I' flag with %d, %i and 	%u. 	(check_format_info): Support printf 'I' flag; warn about it with 	-pedantic.
testsuite:
	* gcc.dg/c99-printf-2.c, gcc.dg/format-xopen-1.c: Add some more
	tests.
	* gcc.dg/format-ext-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35917 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-23  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* c-common.c (print_char_table): Allow 'I' flag with %d, %i and
+	%u.
+	(check_format_info): Support printf 'I' flag; warn about it with
+	-pedantic.
+
 2000-08-23  Richard Earnshaw  (rearnsha@arm.com)
 
 	* arm.c (arm_expand_prologue): Ensure that the stack-adjustment
