--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcc.dg/noncompile/label-lineno-1.c: New test.
+
 2000-08-23  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c99-array-nonobj-1.c: New test.
