--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-23  Hans-Peter Nilsson  <hp@axis.com>
+
+	* Makefile.in (GCC_PASSES): Add specs.
+
 2000-08-23  Jim Wilson  <wilson@cygnus.com>
 
 	* frame.h (IA64_UNW_EHANDLER, IA64_UNW_UHANDLER): New.
