--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-23  Alexandre Oliva  <aoliva@redhat.com>
+
+	* dependence.c: Replace `[][]' with `[][MAX_SUBSCRIPTS]'.
+
 2000-08-23  Hans-Peter Nilsson  <hp@axis.com>
 
 	* Makefile.in (GCC_PASSES): Add specs.
