* configure.in [i*86-*-freebsd*] (TARGET, TARGETDIR): Set. * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35928 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-22  Alexandre Oliva  <aoliva@redhat.com>
+
+	* configure.in [i*86-*-freebsd*] (TARGET, TARGETDIR): Set.
+	* configure: Rebuilt.
+
 2000-05-11  Scott Bambrough  <scottb@netwinder.org>
 
 	* libffi/src/arm/sysv.S (ffi_call_SYSV): Doubles are not saved to 
