--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2000-08-23  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* gnu/gcj/jni/NativeThread.java (NativeThread): Removed assignment
+	to `alive_flag', call `init'.
+	(init): New native method.
+	* gnu/gcj/jni/natNativeThread.cc (init): New native method
+	implementation.
+
 2000-08-21  Mark Wielaard  <mark@klomp.org>
 
 	* Makefile.in: Rebuilt.
