* lib/old-dejagnu.exp: Also ignore "In member function ".
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35932 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-23  Jason Merrill  <jason@redhat.com>
+
+	* lib/old-dejagnu.exp: Also ignore "In member function ".
+
 2000-08-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.dg/noncompile/label-lineno-1.c: New test.
