--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,6 +1,7 @@
 2000-08-23  Jason Merrill  <jason@redhat.com>
 
-	* lib/old-dejagnu.exp: Also ignore "In member function ".
+	* lib/old-dejagnu.exp: Also ignore "In member function" and
+	"At global scope".
 
 2000-08-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
