--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-23  Mark Wielaard  <mark@klomp.org>
+
+	* java/io/PrintWriter.java (print(String)): Don't catch IOException,
+	write(String) already does.
+
 2000-08-23  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* gnu/gcj/jni/NativeThread.java (NativeThread): Removed assignment
