* diagnostic.c (finish_diagnostic): Define. 	(output_do_printf): Use wrap_text instead of output_add_string. 	(default_print_error_function): Avoid embedded '\n'.
	* diagnostic.h (flush_diagnostic_buffer): Declare.

cp/
	* error.c (print_instantiation_context): Don't forget to flush the
	buffer.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35939 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-24  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* error.c (print_instantiation_context): Don't forget to flush the
+	buffer.
+
 2000-08-23  Jason Merrill  <jason@redhat.com>
 
 	* typeck.c (build_ptrmemfunc): Save the input pmf.
