--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-08-24  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* diagnostic.c (finish_diagnostic): Define.
+	(output_do_printf): Use wrap_text instead of output_add_string.
+	(default_print_error_function): Avoid embedded '\n'.
+
+	* diagnostic.h (flush_diagnostic_buffer): Declare.
+
 2000-08-23  Alexandre Oliva  <aoliva@redhat.com>
 
 	* dependence.c: Replace `[][]' with `[][MAX_SUBSCRIPTS]'.
