* c-common.c (time_char_table): Don't allow width with %F. 	(check_format_info): Don't allow "Z" length with scanf.
testsuite:
	* gcc.dg/c99-scanf-2.c: Remove test for scanf "Z" length.
	* gcc.dg/format-ext-2.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35940 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-24  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* c-common.c (time_char_table): Don't allow width with %F.
+	(check_format_info): Don't allow "Z" length with scanf.
+
 2000-08-24  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* diagnostic.c (finish_diagnostic): Define.
