--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-24  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/c99-scanf-2.c: Remove test for scanf "Z" length.
+	* gcc.dg/format-ext-2.c: New test.
+
 2000-08-23  Jason Merrill  <jason@redhat.com>
 
 	* lib/old-dejagnu.exp: Also ignore "In member function" and
