* cp-tree.h (MAIN_NAME_P): Remove macro.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35946 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-24  Greg McGary  <greg@mcgary.org>
+
+	* cp-tree.h (MAIN_NAME_P): Remove macro.
+
 2000-08-24  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* error.c (print_instantiation_context): Don't forget to flush the
