* libiberty/cplus-dem.c (cplus_demangle_opname, cplus_mangle_opname, 	demangle_expression, demangle_function_name): Use ARRAY_SIZE. 	* libiberty/random.c (end_ptr): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35948 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-24  Greg McGary  <greg@mcgary.org>
+
+	* libiberty/cplus-dem.c (cplus_demangle_opname, cplus_mangle_opname,
+	demangle_expression, demangle_function_name): Use ARRAY_SIZE.
+	* libiberty/random.c (end_ptr): Likewise.
+
 2000-08-23  Alex Samuel  <samuel@codesourcery.com>
 
 	* cp-demangle.c (result_close_template_list): Remove function.
