--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-24  Greg McGary  <greg@mcgary.org>
+
+	* intdoc.c (ARRAY_SIZE): Remove macro.
+	* proj.h (ARRAY_SIZE): Remove macro.
+	* com.c (init_decl_processing): Use ARRAY_SIZE.
+
 2000-08-22  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* com-rt.def: Adapt macro DEFGFRT to accept CONST boolean.
