--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-24  Greg McGary  <greg@mcgary.org>
+
+	* lang.c (lang_decode_option): Use ARRAY_SIZE.
+	* parse.y (BINOP_LOOKUP): Likewise.
+
 2000-08-21  Nix  <nix@esperi.demon.co.uk>
         
 	* lang-specs.h: Do not process -o or run the assembler if
