* typeck.c (build_ptrmemfunc): Just reinterpret if there's no         adjustment necessary.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35954 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-24  Jason Merrill  <jason@redhat.com>
+
+	* typeck.c (build_ptrmemfunc): Just reinterpret if there's no
+	adjustment necessary.
+
 2000-08-24  Greg McGary  <greg@mcgary.org>
 
 	* cp-tree.h (MAIN_NAME_P): Remove macro.
