--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-24  Richard Henderson  <rth@cygnus.com>
+
+	* gcc.dg/ia64-sync-1.c: New test.
+	* gcc.dg/ia64-sync-2.c: New test.
+	* gcc.dg/ia64-asm-1.c: New test.
+
 2000-08-24  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c99-scanf-2.c: Remove test for scanf "Z" length.
