--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2000-08-24  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* ggc-page.c (alloc_page): If HAVE_MMAP_ANYWHERE and we're  
+	asked for one page, allocate GGC_QUIRE_SIZE of them and put
+	the extras on the free list.
+	(release_pages): Clean up.
+	(ggc_set_mark): Don't adjust G.allocated here...
+	(sweep_pages): ... do it here.
+
+2000-08-24  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cppfiles.c (read_include_file): Rearrange initializations.
+
 2000-08-24  Richard Henderson  <rth@cygnus.com>
 
 	* stmt.c (expand_asm_operands): Treat EXTRA_CONSTRAINT like g or X.
