--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-24  Greg McGary  <greg@mcgary.org>
 
+	* libiberty/random.c (end_ptr): Revert previous change.
+
+2000-08-24  Greg McGary  <greg@mcgary.org>
+
 	* libiberty/cplus-dem.c (cplus_demangle_opname, cplus_mangle_opname,
 	demangle_expression, demangle_function_name): Use ARRAY_SIZE.
 	* libiberty/random.c (end_ptr): Likewise.
