--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2000-08-23  Mark Wielaard  <mark@klomp.org>
 
+	* java/util/zip/InflaterInputStream.java (read(byte[],int,int)):
+	return -1 when fill() has no more data for the Inflater.
+
+2000-08-23  Mark Wielaard  <mark@klomp.org>
+
 	* java/io/PrintWriter.java (print(String)): Don't catch IOException,
 	write(String) already does.
 
