--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-24  Richard Henderson  <rth@cygnus.com>
+
+	* toplev.c (main): Enable flag_reorder_blocks at -O2.
+
 2000-08-24  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* ggc-page.c (alloc_page): If HAVE_MMAP_ANYWHERE and we're  
