Fix ia64-linux setjmp failures due to attribute aligned on typedef bug. 	* c-common.c (decl_attributes, case A_ALIGN): Revert last change. 	Copy type in a TYPE_DECL, just like pushdecl does.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35966 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-24  Jim Wilson  <wilson@cygnus.com>
+
+	* c-common.c (decl_attributes, case A_ALIGN): Revert last change.
+	Copy type in a TYPE_DECL, just like pushdecl does.
+
 2000-08-24  Richard Henderson  <rth@cygnus.com>
 
 	* toplev.c (main): Enable flag_reorder_blocks at -O2.
